--- a/src/app/components/customer-list/customer-list.component.html
+++ b/src/app/components/customer-list/customer-list.component.html
@@ -1,8 +1,8 @@
 <h2>Customer List</h2>
 <ul>
-  <li *ngFor="let customer of customers">
+  <li *ngFor="let customer of customerList | values">
     <!--<app-customer [customer]="customer"></app-customer>-->
-    {{customer}}
+    {{customer.email}}
 
   </li>
 </ul>
