more complicated store object

--- a/src/app/components/customer-list/customer-list.component.html
+++ b/src/app/components/customer-list/customer-list.component.html
@@ -1,6 +1,6 @@
 <h2>Customer List</h2>
 <ul>
-  <li *ngFor="let customer of customerList | values">
+  <li *ngFor="let customer of customerList">
     <!--<app-customer [customer]="customer"></app-customer>-->
     {{customer.email}}
 
