--- a/src/app/components/customer-list/customer-list.component.html
+++ b/src/app/components/customer-list/customer-list.component.html
@@ -1,8 +1,21 @@
-<h2>Customer List</h2>
-<ul>
-  <li *ngFor="let customer of customerList">
-    <!--<app-customer [customer]="customer"></app-customer>-->
-    {{customer.email}}
+<div class="container">
+  <h2>Customer List</h2>
+  <p>The .table class adds basic styling (light padding and only horizontal dividers) to a table:</p>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Firstname</th>
+        <th>Lastname</th>
+        <th>Email</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let customer of customerList">
+        <td>{{customer.firstName}}</td>
+        <td>{{customer.lastName}}</td>
+        <td>{{customer.email}}</td>
+      </tr>
 
-  </li>
-</ul>
+    </tbody>
+  </table>
+</div>
