Added routing and a Bootstrap trying page

--- a/src/app/components/customer-list/customer-list.component.html
+++ b/src/app/components/customer-list/customer-list.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!--<div class="container">-->
   <div class="jumbotron">
     <h2>Customer List</h2>
     <p>This part is in jumbotron</p>
@@ -23,31 +23,5 @@
     </table>
   </div>
 
-  <h2>==============================================================</h2>
+<!--</div>-->
 
-  <h2>Nesting Button Groups</h2>
-  <p>Nest button groups to create drop down menus:</p>
-  <div class="btn-group">
-    <button type="button" class="btn btn-primary">Apple</button>
-    <button type="button" class="btn btn-primary">Samsung</button>
-    <div class="btn-group">
-      <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-      Sony <span class="caret"></span></button>
-      <ul class="dropdown-menu" role="menu">
-        <li><a href="#">Tablet</a></li>
-        <li><a href="#">Smartphone</a></li>
-      </ul>
-    </div>
-  </div>
-
-  <h2>==============================================================</h2>
-
-  <div class="jumbotron">
-    <h2>Bootstrap List</h2>
-    <ul class="list-group">
-      <li class="list-group-item">container</li>
-      <li class="list-group-item">jumbotron</li>
-      <li class="list-group-item">table-responsive, table table-bordered table-hover</li>
-    </ul>
-  </div>
-</div>
